--- a/src/CreateQuestionPaper/create_question_paper.css
+++ b/src/CreateQuestionPaper/create_question_paper.css
@@ -199,6 +199,7 @@ li {
     display: inline;
     float: right;
     margin: -1%;
+    margin-right: 0.1%;
     margin-top: auto;
 }
 
